--- a/test/configuration_files/wrong_bias_function.conf
+++ b/test/configuration_files/wrong_bias_function.conf
@@ -14,7 +14,7 @@ elite_parents 2
 total_parents 3
 
 # Bias function to be used to rank the parents
-bias_function LOGINVERSE
+bias_function LOGINVRSE
 
 # Number of independent populations
 independent_populations 3
