Adding path relink parameters in the BRKGA_data

--- a/test/configuration_files/wrong_bias_function.conf
+++ b/test/configuration_files/wrong_bias_function.conf
@@ -19,20 +19,23 @@ bias_function LOGINVRSE
 # Number of independent populations
 independent_populations 3
 
+# Number of pairs of chromosomes to be tested to path relinking.
+pr_number_pairs 0
+
 # Mininum distance between chromosomes to path-relink
-#pr_minimum_distance 0.15
+pr_minimum_distance 0.15
 
 # Path relink type
-#pr_type PERMUTATION
+pr_type PERMUTATION
 
 # Individual selection to path-relink
-#pr_selection RANDOMELITE
+pr_selection RANDOMELITE
 
 # Defines the block size based on the size of the population
-#alpha_block_size 1.0
+alpha_block_size 1.0
 
 # Percentage/path size
-#pr_percentage 1.0
+pr_percentage 1.0
 
 # Interval at which elite chromosomes are exchanged (0 means no exchange)
 exchange_interval 200
