--- a/test/configuration_files/wrong_pr_selection.conf
+++ b/test/configuration_files/wrong_pr_selection.conf
@@ -1,17 +1,20 @@
 # Population size
+population_size 500
 
 # Elite percentage
 elite_percentage 0.30
 
 # Mutants percentage
+mutants_percentage 0.15
 
 # Number of elite parents to mate
 elite_parents 2
 
 # Total number of parents to mate
+total_parents 3
 
 # Bias function to be used to rank the parents
-#bias_function LOGINVERSE
+bias_function LOGINVERSE
 
 # Number of independent populations
 independent_populations 3
@@ -26,7 +29,7 @@ pr_minimum_distance 0.15
 pr_type PERMUTATION
 
 # Individual selection to path-relink
-pr_selection RANDOMELITE
+pr_selection WORSEONES
 
 # Defines the block size based on the size of the population
 alpha_block_size 1.0
