--- a/test/configuration_files/wrong_pr_type.conf
+++ b/test/configuration_files/wrong_pr_type.conf
@@ -1,17 +1,20 @@
 # Population size
+population_size 500
 
 # Elite percentage
 elite_percentage 0.30
 
 # Mutants percentage
+mutants_percentage 0.15
 
 # Number of elite parents to mate
 elite_parents 2
 
 # Total number of parents to mate
+total_parents 3
 
 # Bias function to be used to rank the parents
-#bias_function LOGINVERSE
+bias_function LOGINVERSE
 
 # Number of independent populations
 independent_populations 3
@@ -23,7 +26,7 @@ pr_number_pairs 0
 pr_minimum_distance 0.15
 
 # Path relink type
-pr_type PERMUTATION
+pr_type SCRAMBLED
 
 # Individual selection to path-relink
 pr_selection RANDOMELITE
