Refactoring BrkgaData by extracting BrkgaParams.

--- a/test/configuration_files/wrong_type.conf
+++ b/test/configuration_files/wrong_type.conf
@@ -1,3 +1,27 @@
+###############################################################################
+# wrong_type.conf: example of a configuration file for BRKGA-MP-IPR
+#                  frameworks.
+#
+# (c) Copyright 2019, Carlos Eduardo de Andrade. All Rights Reserved.
+#
+# This code is released under LICENSE.md.
+#
+# Created on:  Dec 28, 2018 by ceandrade
+# Last update: Jan 07, 2019 by ceandrade
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+# POSSIBILITY OF SUCH DAMAGE.
+###############################################################################
+
 # Population size
 population_size 500.123
 
@@ -8,16 +32,16 @@ elite_percentage 0.3
 mutants_percentage 0.15
 
 # Number of elite parents to mate
-elite_parents 2
+num_elite_parents 2
 
 # Total number of parents to mate
 total_parents 3
 
 # Bias function to be used to rank the parents
-bias_function LOGINVERSE
+bias_type LOGINVERSE
 
 # Number of independent populations
-independent_populations 3
+num_independent_populations 3
 
 # Number of pairs of chromosomes to be tested to path relinking.
 pr_number_pairs 0
