--- a/examples/tsp/config.conf
+++ b/examples/tsp/config.conf
@@ -6,7 +6,7 @@
 # This code is released under LICENSE.md.
 #
 # Created on:  Dec 28, 2018 by ceandrade
-# Last update: Jan 07, 2019 by ceandrade
+# Last update: Jan 09, 2019 by ceandrade
 #
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 # AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
@@ -22,7 +22,7 @@
 ###############################################################################
 
 # Population size
-population_size 500
+population_size 2000
 
 # Elite percentage
 elite_percentage 0.30
@@ -52,7 +52,7 @@ pr_minimum_distance 0.15
 pr_type PERMUTATION
 
 # Individual selection to path-relink
-pr_selection RANDOMELITE
+pr_selection BESTSOLUTION
 
 # Defines the block size based on the size of the population
 alpha_block_size 1.0
