Fixings in the docstrings.

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Carlos Eduardo de Andrade <ce.andrade@gmail.com>"]
 version = "1.0.0"
 
 [deps]
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
