--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,14 @@ matrix:
   allow_failures:
   - julia: nightly
 
+before_install:
+  - sudo apt-get -y install hdf5-tools
+
+addons:
+  homebrew:
+    packages:
+    - hdf5
+
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("BrkgaMpIpr")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
