Changing Travis to Julia 1.2

--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 julia = "1.0"
 
 [extras]
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
