--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,8 +35,9 @@ install:
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
-  - C:\projects\julia\bin\julia -e "versioninfo();
-      Pkg.clone(pwd(), \"BrkgaMpIpr\"); Pkg.build(\"BrkgaMpIpr\")"
+  # - C:\projects\julia\bin\julia -e "versioninfo();
+  #     Pkg.clone(pwd(), \"BrkgaMpIpr\"); Pkg.build(\"BrkgaMpIpr\")"
+  - C:\projects\julia\bin\julia -e "Pkg.clone(pwd(), \"BrkgaMpIpr\"); Pkg.build(\"BrkgaMpIpr\")"
 
 test_script:
   - C:\projects\julia\bin\julia -e "Pkg.test(\"BrkgaMpIpr\")"
