--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,18 @@ script:
   - julia -e 'Pkg.test("PkgName",coverage=true)'
 
 after_success:
-  - julia -e julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("BrkgaMpIpr")); include(joinpath("docs", "make.jl"))'
+  #- julia -e julia -e 'Pkg.add("Documenter")'
+  #- julia -e 'cd(Pkg.dir("BrkgaMpIpr")); include(joinpath("docs", "make.jl"))'
   - julia -e 'cd(Pkg.dir("BrkgaMpIpr")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   - julia -e 'cd(Pkg.dir("BrkgaMpIpr")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1.2
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
