--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,10 @@ addons:
   #- julia -e 'import Pkg; Pkg.test("PkgName",coverage=true)'
 
 after_success:
-  #- julia -e julia -e 'Pkg.add("Documenter")'
-  #- julia -e 'cd(Pkg.dir("BrkgaMpIpr")); include(joinpath("docs", "make.jl"))'
-  - julia -e 'cd(Pkg.dir("BrkgaMpIpr")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-  - julia -e 'cd(Pkg.dir("BrkgaMpIpr")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  #- julia -e 'using Pkg; Pkg.add("Documenter")'
+  #- julia -e 'using Pkg; cd(Pkg.dir("BrkgaMpIpr")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'using Pkg; cd(Pkg.dir("BrkgaMpIpr")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'using Pkg; cd(Pkg.dir("BrkgaMpIpr")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 
 jobs:
   include:
