--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,13 +37,12 @@ build_script:
   - IF EXIST .git\shallow (git fetch --unshallow)
   # - C:\projects\julia\bin\julia -e "versioninfo();
   #     Pkg.clone(pwd(), \"BrkgaMpIpr\"); Pkg.build(\"BrkgaMpIpr\")"
-  - C:\projects\julia\bin\julia -e "Pkg.clone(pwd(), \"BrkgaMpIpr\"); Pkg.build(\"BrkgaMpIpr\")"
+  - C:\projects\julia\bin\julia -e "using Pkg; Pkg.clone(pwd(), \"BrkgaMpIpr\"); Pkg.build(\"BrkgaMpIpr\")"
 
 test_script:
-  - C:\projects\julia\bin\julia -e "Pkg.test(\"BrkgaMpIpr\")"
+  - C:\projects\julia\bin\julia -e "using Pkg; Pkg.test(\"BrkgaMpIpr\")"
 
 after_test:
   - C:\projects\julia\bin\julia -e "using Pkg; Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
   - C:\projects\julia\bin\julia -e "using Pkg; Pkg.add(\"Coverage\"); using Coverage; Coveralls.submit(process_folder())"
-    
 
