Removing unused dependecies

--- a/Project.toml
+++ b/Project.toml
@@ -9,13 +9,11 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
-DocStringExtensions = "0.6.0"
-FileIO = "1.0.5"
-JLD = "0.9.1"
-Revise = "0.7.15"
+DocStringExtensions = ">= 0.8.1"
+FileIO = ">= 1.0.5"
+JLD = ">= 0.9.1"
 julia = "1.2"
 
 [extras]
