Migrating to JLD2 due to problems with legacy HDF5

--- a/Project.toml
+++ b/Project.toml
@@ -6,14 +6,14 @@ version = "1.0.0"
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
-JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 DocStringExtensions = ">= 0.8.1"
 FileIO = ">= 1.0.5"
-JLD = ">= 0.9.1"
+JLD2 = ">= 0.1.9"
 julia = "1.2"
 
 [extras]
