--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 environment:
   matrix:
-  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.3/julia-1.3.1-win64.exe"
-  #- JULIA_URL: "https://julialangnightlies-s3.julialang.org/bin/winnt/x64/julia-latest-win64.exe"
+  #- JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.3/julia-1.3.1-win64.exe"
+  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.4/julia-1.4.0-win64.exe"
+  - JULIA_URL: "https://julialangnightlies-s3.julialang.org/bin/winnt/x64/julia-latest-win64.exe"
 
 #matrix:
   #allow_failures:
@@ -30,7 +31,7 @@ install:
         $env:JULIA_URL,
         "C:\projects\julia-binary.exe")
 # Run installer silently, output to C:\projects\julia
-  - C:\projects\julia-binary.exe /S /D=C:\projects\julia
+  - C:\projects\julia-binary.exe /VERYSILENT /DIR=C:\projects\julia
 
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
